fix(FEC-10890): the captions aren't displayed for audio entry
Issue: subtitles container append before poster and located under it on the DOM tree.
Solution: add z-index to subtitle to appear above the poster.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -48,6 +48,7 @@
   bottom: 0;
   right: 0;
   left: 0;
+  z-index: 1;
 }
 
 .playkit-black-cover {
